Fixed overlapping issue by extracting the ::before light behavior and background to an absolute div specific for that.

--- a/src/components/ProjectsContainer.css
+++ b/src/components/ProjectsContainer.css
@@ -10,7 +10,6 @@
 .project {
     padding: 1rem;
     border: 2px white solid;
-    background: linear-gradient(to bottom right, #111111EE, #111111);
     border-radius: 25px;
     overflow: hidden;
 
@@ -21,25 +20,27 @@
 
     box-shadow: -10px 10px 20px 5px black;
     position: relative;
-    z-index: 0;
 }
 
-.project::before {
+.project-bg {
     position: absolute;
-    content: "";
-    top: 0;
-    left: 0;
-    width: 100%;
+    top:0;
+    left:0;
     height: 100%;
-    border-radius: inherit;
-    background: radial-gradient(20rem circle at var(--mouse-x) var(--mouse-y), #AAAAFF11, transparent 50%);
-    transition: 3s;
-    opacity: 0.5;
+    width: 100%;
+    background: linear-gradient(to bottom right, #111111EE, #111111);
     z-index: -1;
 }
 
-.project:hover::before {
-    transition: 0.5s;
+.project-light {
+    height: 100%;
+    width: 100%;
+    background: radial-gradient(20rem circle at var(--mouse-x) var(--mouse-y), #AAAAFF11, transparent 50%);
+    transition: 3s;
+    opacity: 0.5;
+}
+
+.project-light:hover {
     opacity: 1;
 }
 
@@ -61,6 +62,7 @@
     max-width: 65%;
     max-height: 100%;
     cursor: pointer;
+    z-index: 1;
 }
 
 .project-tech-area {
