--- a/src/components/ZoomableImage.css
+++ b/src/components/ZoomableImage.css
@@ -11,6 +11,7 @@
     display: flex;
     align-items: center;
     animation: 200ms fade-in;
+    z-index: 1;
 }
 
 .img-container {
@@ -24,7 +25,7 @@
 
 .full-image {
     max-width: 70vw;
-    max-height: 100%;
+    max-height: 100vh;
     box-shadow: 0px -10px 50px 35px rgba(0, 0, 0, 0.8);
 }
 
